fixed the rest of the spacing and created the carosell

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ header{
 .HomeButton{
     color:white;
     font-size: 20px;
-    background-color: #4b4b4b76;
+    background-color: #3636365a;
     backdrop-filter: blur(10px);
     display: flex;
     justify-content: center;
@@ -149,6 +149,18 @@ header{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    height: 470px;
+}
+
+.inquiries{
+    padding-bottom: 55px;
+}
+
+.contact{
+    width: 400px;
+    background-color: #2c2c2c78;
+    border-color: #fff;
+    height:25px;
 }
 
 .tutPart{
@@ -160,6 +172,7 @@ header{
     column-gap: 200px;
     background-color: #4b4b4b76;
     backdrop-filter: blur(10px);
+    height:300px;
 }
 
 .tutButton{
